vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_expr_branch_block.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_expr_branch_block.vv:5:4: error: expression evaluated but not used
    3 |     _ := if cond {
    4 |         {
    5 |             $embed_file(@FILE)
      |             ~~~~~~~~~~~~~~~~~~
    6 |         }
    7 |         0
