vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_expr_branch_block.vv
fn main() {
	cond := true
	_ := if cond {
		{
			$embed_file(@FILE)
		}
		0
	} else {
		1
	}
}
